--- a/ventas-perdidas.html
+++ b/ventas-perdidas.html
@@ -102,7 +102,7 @@
         <h2>📋 Registro de Ventas Perdidas</h2>
         
         <iframe 
-            src="https://docs.google.com/forms/d/e/1FAIpQLSf3UjopXwZDNJqomWO3WR-f8bRmJaI2JDJOP8TC6xoXWY-2Dw/viewform?embedded=true" 
+            src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAANAAbk4L9ZUQVBIOEVVWks1WTEwVVU4SEVGNDRITUU5Ny4u" 
             width="100%" 
             height="400" 
             frameborder="0" 
@@ -118,4 +118,5 @@
     </a>
 
 </body>
+
 </html>
