--- a/seguimiento-ventas.html
+++ b/seguimiento-ventas.html
@@ -102,7 +102,7 @@
         <h2>📊 Tablero de Seguimiento de Ventas</h2>
         
         <iframe 
-                src="https://docs.google.com/forms/d/e/1FAIpQLSe0qI8GEmXE97gzOAPIwbDuAQdXT7Y25ewf9GPsfHM5pbOhwQ/viewform?embedded=true" 
+                src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAANAAbk4L9ZUMUpWWVlJQjVMSU9aNVdCSE5PVVc1NUpaVy4u" 
                 frameborder="0" 
                 marginheight="0" 
                 marginwidth="0">
@@ -115,4 +115,5 @@
     </a>
 
 </body>
+
 </html>
